--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <div class="box-vegetable">
                 <div class="v-box">Vegetables</div>
                     <div class="vimg">
-                        <img class="sec" src="/img/img_vegetables_carrot.png">
-                        <img class="sec" src="/img/img_vegetables_corn.png">
-                        <img class="sec" src="/img/img_vegetables_pepper.png">
+                        <img class="sec" src="./img/img_vegetables_carrot.png">
+                        <img class="sec" src="./img/img_vegetables_corn.png">
+                        <img class="sec" src="./img/img_vegetables_pepper.png">
                     </div>
             </div>
             <div class="box-contact">
